archive/manifests/ubuntu-debug.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-debug
  namespace: default
  labels:
    app: ubuntu-debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-debug
  template:
    metadata:
      labels:
        app: ubuntu-debug
    spec:
      containers:
      - name: ubuntu-debug
        image: kevinchanaka/ubuntu-user:latest
        volumeMounts:
        - name: data
          mountPath: /home/ubuntu/mount/data
        - name: files
          mountPath: /home/ubuntu/mount/files
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ubuntu-debug-data
      - name: files
        persistentVolumeClaim:
          claimName: ubuntu-debug-files
