archive/manifests/ubuntu.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-debug
  namespace: default
  labels:
    app: ubuntu-debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-debug
  template:
    metadata:
      labels:
        app: ubuntu-debug
    spec:
      containers:
      - name: ubuntu-debug
        image: kevinchanaka/ubuntu-user:latest
