archive/manifests/openldap.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
      - name: openldap
        image: osixia/openldap:latest
        ports:
        - name: ldap
          containerPort: 389
        - name: ldaps
          containerPort: 636
        volumeMounts:
        - name: scratch
          mountPath: /container/service/slapd/assets/certs
          readOnly: false
        resources: 
          requests: 
            cpu: 200m
      volumes:
      - name: certs
        secret:
          secretName: openldap-tls
      - name: scratch
        emptyDir: {}
        
---

apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: auth
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.163
  selector:
    app: openldap
  ports:
  - protocol: TCP
    name: ldap
    port: 389
