archive/manifests/sagemcom-router-reboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-grid
  namespace: default
  labels:
    app: selenium-grid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-grid
  template:
    metadata:
      labels:
        app: selenium-grid
    spec:
      containers:
      - name: selenium-grid
        ports:
        - containerPort: 4444
        image: selenium/standalone-chrome:4.5.0-20220929
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory

---

apiVersion: v1
kind: Service
metadata:
  name: selenium-grid
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: selenium-grid
  ports:
    - protocol: TCP
      port: 4444
