archive/manifests/terraria-un-spacey.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraria-un-spacey
  namespace: default
  labels:
    app: terraria-un-spacey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terraria-un-spacey
  template:
    metadata:
      labels:
        app: terraria-un-spacey
    spec:
      containers:
      - name: terraria
        image: kevinchanaka/terraria:latest
        ports:
        - containerPort: 7777
        volumeMounts:
        - name: data
          mountPath: /app/data
        - name: config
          mountPath: /app/data/config/serverconfig.txt
          subPath: serverconfig.txt
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: terraria-un-spacey
      - name: config
        configMap:
          items:
          - key: serverconfig.txt
            path: serverconfig.txt
          name: terraria-un-spacey
        
---

apiVersion: v1
kind: Service
metadata:
  name: terraria-un-spacey
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.165
  selector:
    app: terraria-un-spacey
  ports:
    - protocol: TCP
      port: 7777
