archive/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: eg-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: eg
  listeners: # Wildcard certs are temporary until Gateway API ListenerSet is mature
  - protocol: HTTPS
    port: 443
    name: argocd
    hostname: "argocd.lab.kevinf.xyz"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: eg-argocd-tls
        kind: Secret
  - protocol: HTTPS
    port: 443
    name: argocd-grpc
    hostname: "grpc.argocd.lab.kevinf.xyz"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: eg-argocd-grpc-tls
        kind: Secret
