archive/manifests/phpldapadmin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
      - name: phpldapadmin
        image: osixia/phpldapadmin:latest
        volumeMounts:
        - name: scratch
          mountPath: /container/service/ldap-client/assets/certs/
          readOnly: false
        resources: 
          requests: 
            cpu: 200m
      volumes:
      - name: certs
        secret:
          secretName: openldap-tls
      - name: scratch
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: auth
spec:
  type: ClusterIP
  selector:
    app: phpldapadmin
  ports:
  - protocol: TCP
    port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - phpldapadmin.lab.kevinf.xyz
    secretName: phpldapadmin-tls
  rules:
  - host: phpldapadmin.lab.kevinf.xyz
    http:
      paths:
      - backend:
          service:
            name: phpldapadmin
            port: 
              number: 80
        path: /
        pathType: Prefix
